Source/WebCore/editing/Editor.cpp
@@ -1359,7 +1359,7 @@ void Editor::setComposition(const String& text, SetCompositionMode mode)
 
     // If text is empty, then delete the old composition here.  If text is non-empty, InsertTextCommand::input
     // will delete the old composition with an optimized replace operation.
-    if (text.isEmpty())
+    if (text.isEmpty() && mode != CancelComposition)
         TypingCommand::deleteSelection(m_frame->document(), 0);
 
     m_compositionNode = 0;
